@@ -223,8 +223,8 @@ global int siginterrupt (int sig, int flag) {
 global ssize_t read_helper (int fd, void* bufarea, size_t nbyte, perseverance_t persev)
 {
   var char* buf = (char*) bufarea;
-  var ssize_t retval;
-  var ssize_t done = 0;
+  if (nbyte == 0)
+    return 0;
  #if defined(GENERATIONAL_GC) && defined(SPVW_MIXED)
   /* Must adjust the memory permissions before calling read().
    - On SunOS4 a missing write permission causes the read() call to hang
@@ -237,32 +237,89 @@ global ssize_t read_helper (int fd, void* bufarea, size_t nbyte, perseverance_t 
    does not specify anything about possible side effects. */
   handle_fault_range(PROT_READ_WRITE,(aint)buf,(aint)buf+nbyte);
  #endif
-  {
-    NO_BLOCK_DECL(fd);
-    if (persev == persev_immediate || persev == persev_bonus) START_NO_BLOCK(fd);
-    while (nbyte!=0) {
-      retval = read(fd,buf,nbyte);
-      if (retval == 0)
-        break;
-      else if (retval < 0) {
-        if ((persev == persev_immediate || persev == persev_bonus)
-            && (errno == EAGAIN || errno == EWOULDBLOCK))
-          break;
-       #ifdef EINTR
-        if (errno != EINTR)
-       #endif
-          {
-            done = retval; /* -1 */
-            break;
-          }
+  if (persev == persev_immediate || persev == persev_bonus) {
+    #if defined(HAVE_POLL) && (defined(HAVE_RELIABLE_POLL) || !defined(HAVE_RELIABLE_SELECT))
+      var struct pollfd pollfd_bag[1];
+      pollfd_bag[0].fd = fd;
+      pollfd_bag[0].events = POLLIN;
+      pollfd_bag[0].revents = 0;
+     restart_poll:
+      var int result = poll(&pollfd_bag[0],1,0);
+      if (result<0) {
+        if (errno==EINTR)
+          goto restart_poll;
+        OS_error();
       } else {
-        buf += retval; done += (size_t)retval; nbyte -= (size_t)retval;
-        if (persev != persev_full)
-          break;
+        # revents has POLLIN or some other bits set if read() would return
+        # without blocking.
+        if (pollfd_bag[0].revents == 0)
+          return 0;
       }
-    }
-    if (persev == persev_immediate || persev == persev_bonus) END_NO_BLOCK(fd);
+      # Now we know that read() will return immediately.
+    #elif defined(HAVE_SELECT) && !defined(UNIX_BEOS)
+      # Use select() with readfds = singleton set {fd}
+      # and timeout = zero interval.
+      var fd_set handle_set; # set of handles := {fd}
+      var struct timeval zero_time; # time interval := 0
+      FD_ZERO(&handle_set); FD_SET(fd,&handle_set);
+     restart_select:
+      zero_time.tv_sec = 0; zero_time.tv_usec = 0;
+      var int result = select(FD_SETSIZE,&handle_set,NULL,NULL,&zero_time);
+      if (result<0) {
+        if (errno==EINTR)
+          goto restart_select;
+        if (!(errno==EBADF)) { OS_error(); } # UNIX_LINUX returns EBADF for files!
+      } else {
+        # result = number of handles in handle_set for which read() would
+        # return without blocking.
+        if (result==0)
+          return 0;
+      }
+      # Now we know that read() will return immediately.
+    #else
+      # As a last resort, use non-blocking I/O.
+      var ssize_t done = 0;
+      NO_BLOCK_DECL(fd);
+      START_NO_BLOCK(fd);
+      do {
+        var ssize_t retval = read(fd,buf,nbyte);
+        if (retval == 0)
+          break;
+        else if (retval < 0) {
+          if (errno == EAGAIN || errno == EWOULDBLOCK)
+            break;
+         #ifdef EINTR
+          if (errno != EINTR)
+         #endif
+            {
+              done = retval; /* -1 */
+              break;
+            }
+        } else {
+          buf += retval; done += (size_t)retval; nbyte -= (size_t)retval;
+          break;
+        }
+      } while (nbyte != 0);
+      END_NO_BLOCK(fd);
+      return done;
+    #endif
   }
+  var ssize_t done = 0;
+  do {
+    var ssize_t retval = read(fd,buf,nbyte);
+    if (retval == 0)
+      break;
+    else if (retval < 0) {
+     #ifdef EINTR
+      if (errno != EINTR)
+     #endif
+        return retval; /* -1 */
+    } else {
+      buf += retval; done += (size_t)retval; nbyte -= (size_t)retval;
+      if (persev != persev_full)
+        break;
+    }
+  } while (nbyte != 0);
   return done;
 }
 
@@ -270,36 +327,95 @@ global ssize_t read_helper (int fd, void* bufarea, size_t nbyte, perseverance_t 
 global ssize_t write_helper (int fd, const void* bufarea, size_t nbyte, perseverance_t persev)
 {
   var const char* buf = (const char*) bufarea;
-  var ssize_t retval;
-  var ssize_t done = 0;
+  if (nbyte == 0)
+    return 0;
  #if defined(GENERATIONAL_GC) && defined(SPVW_MIXED)
   /* Must adjust the memory permissions before calling write(). */
   handle_fault_range(PROT_READ,(aint)buf,(aint)buf+nbyte);
  #endif
-  {
-    NO_BLOCK_DECL(fd);
-    if (persev == persev_immediate || persev == persev_bonus) START_NO_BLOCK(fd);
-    while (nbyte!=0) {
-      retval = write(fd,buf,nbyte);
-      if (retval < 0) {
-        if ((persev == persev_immediate || persev == persev_bonus)
-            && (errno == EAGAIN || errno == EWOULDBLOCK))
-          break;
-       #ifdef EINTR
-        if (errno != EINTR)
-       #endif
-          {
-            done = retval; /* -1 */
-            break;
-          }
+  if (persev == persev_immediate || persev == persev_bonus) {
+    #if defined(HAVE_POLL) && (defined(HAVE_RELIABLE_POLL) || !defined(HAVE_RELIABLE_SELECT))
+      var struct pollfd pollfd_bag[1];
+      pollfd_bag[0].fd = fd;
+      pollfd_bag[0].events = POLLOUT;
+      pollfd_bag[0].revents = 0;
+     restart_poll:
+      var int result = poll(&pollfd_bag[0],1,0);
+      if (result<0) {
+        if (errno==EINTR)
+          goto restart_poll;
+        OS_error();
       } else {
-        buf += retval; done += (size_t)retval; nbyte -= (size_t)retval;
-        if (persev != persev_full)
-          break;
+        # revents has POLLOUT or some other bits set if write() would return
+        # without blocking.
+        if (pollfd_bag[0].revents == 0)
+          return 0;
       }
-    }
-    if (persev == persev_immediate || persev == persev_bonus) END_NO_BLOCK(fd);
+      # Now we know that write() will return immediately.
+    #elif defined(HAVE_SELECT) && !defined(UNIX_BEOS)
+      # Use select() with writefds = singleton set {fd}
+      # and timeout = zero interval.
+      var fd_set handle_set; # set of handles := {fd}
+      var struct timeval zero_time; # time interval := 0
+      FD_ZERO(&handle_set); FD_SET(fd,&handle_set);
+     restart_select:
+      zero_time.tv_sec = 0; zero_time.tv_usec = 0;
+      var int result = select(FD_SETSIZE,NULL,&handle_set,NULL,&zero_time);
+      if (result<0) {
+        if (errno==EINTR)
+          goto restart_select;
+        if (!(errno==EBADF)) { OS_error(); } # UNIX_LINUX returns EBADF for files!
+      } else {
+        # result = number of handles in handle_set for which write() would
+        # return without blocking.
+        if (result==0)
+          return 0;
+      }
+      # Now we know that write() will return immediately.
+    #else
+      # As a last resort, use non-blocking I/O.
+      var ssize_t done = 0;
+      NO_BLOCK_DECL(fd);
+      START_NO_BLOCK(fd);
+      do {
+        var ssize_t retval = write(fd,buf,nbyte);
+        if (retval == 0)
+          break;
+        else if (retval < 0) {
+          if (errno == EAGAIN || errno == EWOULDBLOCK)
+            break;
+         #ifdef EINTR
+          if (errno != EINTR)
+         #endif
+            {
+              done = retval; /* -1 */
+              break;
+            }
+        } else {
+          buf += retval; done += (size_t)retval; nbyte -= (size_t)retval;
+          break;
+        }
+      } while (nbyte != 0);
+      END_NO_BLOCK(fd);
+      return done;
+    #endif
   }
+  var ssize_t done = 0;
+  do {
+    var ssize_t retval = write(fd,buf,nbyte);
+    if (retval == 0)
+      break;
+    else if (retval < 0) {
+     #ifdef EINTR
+      if (errno != EINTR)
+     #endif
+        return retval; /* -1 */
+    } else {
+      buf += retval; done += (size_t)retval; nbyte -= (size_t)retval;
+      if (persev != persev_full)
+        break;
+    }
+  } while (nbyte != 0);
   return done;
 }
 
@@ -308,79 +424,129 @@ global ssize_t write_helper (int fd, const void* bufarea, size_t nbyte, persever
 /* BeOS 5 sockets cannot be used like file descriptors. */
 
 /* A wrapper around the recv() function. */
-/* FIXME: persev_immediate case totally untested ! */
 global ssize_t sock_read (int fd, void* bufarea, size_t nbyte, perseverance_t persev) {
   var char* buf = (char*) bufarea;
-  var ssize_t retval;
-  var ssize_t done = 0;
+  if (nbyte == 0)
+    return 0;
  #if defined(GENERATIONAL_GC) && defined(SPVW_MIXED)
   /* Must adjust the memory permissions before calling recv(). */
   handle_fault_range(PROT_READ_WRITE,(aint)buf,(aint)buf+nbyte);
  #endif
-  {
-    NO_BLOCK_DECL(fd);
-    if (persev == persev_immediate || persev == persev_bonus) START_NO_BLOCK(fd);
-    while (nbyte!=0) {
-      retval = recv(fd,buf,nbyte,0);
-      if (retval == 0)
-        break;
-      else if (retval < 0) {
-        if ((persev == persev_immediate || persev == persev_bonus)
-            && (errno == EAGAIN || errno == EWOULDBLOCK))
-          break;
-       #ifdef EINTR
-        if (errno != EINTR)
-       #endif
-          {
-            done = retval; /* -1 */
-            break;
-          }
-      } else {
-        buf += retval; done += (size_t)retval; nbyte -= (size_t)retval;
-        if (persev != persev_full)
-          break;
-      }
+  if (persev == persev_immediate || persev == persev_bonus) {
+    # Use select() with readfds = singleton set {fd}
+    # and timeout = zero interval.
+    var fd_set handle_set; # set of handles := {fd}
+    var struct timeval zero_time; # time interval := 0
+    FD_ZERO(&handle_set); FD_SET(fd,&handle_set);
+   restart_select:
+    zero_time.tv_sec = 0; zero_time.tv_usec = 0;
+    var int result = select(FD_SETSIZE,&handle_set,NULL,NULL,&zero_time);
+    if (result<0) {
+      if (errno==EINTR)
+        goto restart_select;
+      OS_error();
+    } else {
+      # result = number of handles in handle_set for which read() would
+      # return without blocking.
+      if (result==0)
+        return 0;
     }
-    if (persev == persev_immediate || persev == persev_bonus) END_NO_BLOCK(fd);
+    # Now we know that recv() will return immediately.
   }
+  var ssize_t done = 0;
+  do {
+    var ssize_t retval = recv(fd,buf,nbyte,0);
+    if (retval == 0)
+      break;
+    else if (retval < 0) {
+     #ifdef EINTR
+      if (errno != EINTR)
+     #endif
+        return retval; /* -1 */
+    } else {
+      buf += retval; done += (size_t)retval; nbyte -= (size_t)retval;
+      if (persev != persev_full)
+        break;
+    }
+  } while (nbyte != 0);
   return done;
 }
 
 /* A wrapper around the send() function. */
-/* FIXME: persev_immediate case totally untested ! */
 global ssize_t sock_write (int fd, const void* bufarea, size_t nbyte, perseverance_t persev)
 {
   var const char* buf = (const char*) bufarea;
-  var ssize_t retval;
-  var ssize_t done = 0;
+  if (nbyte == 0)
+    return 0;
  #if defined(GENERATIONAL_GC) && defined(SPVW_MIXED)
   /* Must adjust the memory permissions before calling send(). */
   handle_fault_range(PROT_READ,(aint)buf,(aint)buf+nbyte);
  #endif
-  {
-    NO_BLOCK_DECL(fd);
-    if (persev == persev_immediate || persev == persev_bonus) START_NO_BLOCK(fd);
-    while (nbyte!=0) {
-      retval = send(fd,buf,nbyte,0);
-      if (retval < 0) {
-        if ((persev == persev_immediate || persev == persev_bonus)
-            && (errno == EAGAIN || errno == EWOULDBLOCK))
-          break;
-       #ifdef EINTR
-        if (errno != EINTR)
-       #endif
-          {
-            done = retval; /* -1 */
-            break;
-          }
+  if (persev == persev_immediate || persev == persev_bonus) {
+    #if 0 /* On BeOS, select() supports only readfds, not writefds. */
+      # Use select() with writefds = singleton set {fd}
+      # and timeout = zero interval.
+      var fd_set handle_set; # set of handles := {fd}
+      var struct timeval zero_time; # time interval := 0
+      FD_ZERO(&handle_set); FD_SET(fd,&handle_set);
+     restart_select:
+      zero_time.tv_sec = 0; zero_time.tv_usec = 0;
+      var int result = select(FD_SETSIZE,NULL,&handle_set,NULL,&zero_time);
+      if (result<0) {
+        if (errno==EINTR)
+          goto restart_select;
+        OS_error();
       } else {
-        buf += retval; done += (size_t)retval; nbyte -= (size_t)retval;
-        if (persev != persev_full)
-          break;
+        # result = number of handles in handle_set for which write() would
+        # return without blocking.
+        if (result==0)
+          return 0;
       }
-    }
-    if (persev == persev_immediate || persev == persev_bonus) END_NO_BLOCK(fd);
+      # Now we know that send() will return immediately.
+    #else
+      # As a last resort, use non-blocking I/O.
+      var ssize_t done = 0;
+      NO_BLOCK_DECL(fd);
+      START_NO_BLOCK(fd);
+      do {
+        var ssize_t retval = send(fd,buf,nbyte,0);
+        if (retval == 0)
+          break;
+        else if (retval < 0) {
+          if (errno == EAGAIN || errno == EWOULDBLOCK)
+            break;
+         #ifdef EINTR
+          if (errno != EINTR)
+         #endif
+            {
+              done = retval; /* -1 */
+              break;
+            }
+        } else {
+          buf += retval; done += (size_t)retval; nbyte -= (size_t)retval;
+          break;
+        }
+      } while (nbyte != 0);
+      END_NO_BLOCK(fd);
+      return done;
+    #endif
   }
+  var ssize_t done = 0;
+  do {
+    var ssize_t retval = send(fd,buf,nbyte,0);
+    if (retval == 0)
+      break;
+    else if (retval < 0) {
+     #ifdef EINTR
+      if (errno != EINTR)
+     #endif
+        return retval; /* -1 */
+    } else {
+      buf += retval; done += (size_t)retval; nbyte -= (size_t)retval;
+      if (persev != persev_full)
+        break;
+    }
+  } while (nbyte != 0);
   return done;
 }
 
